[package]
name = "teloren"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vek = { version = "0.16", features = ["serde"] }
termion = "3.0"
clap = { version = "4.5", features = ["wrap_help"] }
specs = { version = "0.20", features = ["nightly"] }
tokio = "1"

veloren-client = { git = "https://gitlab.com/veloren/veloren.git", tag = "weekly" }
veloren-common = { git = "https://gitlab.com/veloren/veloren.git", tag = "weekly", features = ["no-assets"] }
veloren-common-net = { git = "https://gitlab.com/veloren/veloren.git", tag = "weekly" }

[profile.dev]
opt-level = 2
overflow-checks = false

[patch.crates-io]
shred = { git = "https://github.com/amethyst/shred.git", rev = "5d52c6fc390dd04c12158633e77591f6523d1f85" }
