[package]
name = "teloren"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vek = { version = "0.17", features = ["serde"] }
termion = "4.0"
clap = { version = "4.5", features = ["wrap_help"] }
specs = { version = "0.20", features = ["nightly"] }
tokio = "1"

veloren-client = { git = "https://gitlab.com/veloren/veloren.git", tag = "weekly" }
veloren-common = { git = "https://gitlab.com/veloren/veloren.git", tag = "weekly", features = ["no-assets"] }
veloren-common-net = { git = "https://gitlab.com/veloren/veloren.git", tag = "weekly" }

[profile.dev]
opt-level = 2
overflow-checks = false

[patch.crates-io]
specs = { git = "https://github.com/amethyst/specs.git", rev = "4e2da1df29ee840baa9b936593c45592b7c9ae27" }
